<?xml version="1.0" encoding="utf-8"?>
<!-- The five CLIENT tabs. Notifications are a bell in the header, not a tab. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_requests"
        android:icon="@drawable/ic_requests"
        android:title="@string/nav_requests" />

    <item
        android:id="@+id/nav_catalog"
        android:icon="@drawable/ic_catalog"
        android:title="@string/nav_catalog" />

    <item
        android:id="@+id/nav_billing"
        android:icon="@drawable/ic_billing"
        android:title="@string/nav_billing" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account"
        android:title="@string/nav_account" />

</menu>
